java-postgres-app/manifests/destinationrule-db.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: edb-postgres-simple-tls
  namespace: edb-test
spec:
  host: ort1-str-region-1-rw-primary.pgd-group.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 5432
      tls:
        mode: SIMPLE
        caCertificates: /var/run/secrets/istio/root-cert.pem
